8169231: Fix tests to add @compile --add-modules to workaround jtreg bug
Reviewed-by: jjg